--- a/UIAutomationTestingUsingSeleniumOnCloudByLambdaTest/test-output/emailable-report.html
+++ b/UIAutomationTestingUsingSeleniumOnCloudByLambdaTest/test-output/emailable-report.html
@@ -9,17 +9,17 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">EdgeTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">21,178</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">FirefoxTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">22,504</td><td></td><td></td></tr>
-<tr><td><a href="#t2">ChromeTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">55,591</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">99,273</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">EdgeTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">29,529</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">ChromeTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">44,666</td><td></td><td></td></tr>
+<tr><td><a href="#t2">FirefoxTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">48,878</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">123,073</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">EdgeTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">lambdatest.LambdaTestDemo</td><td><a href="#m0">loginTestDemo</a></td><td rowspan="1">1705496026516</td><td rowspan="1">21079</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">FirefoxTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">lambdatest.LambdaTestDemo</td><td><a href="#m1">loginTestDemo</a></td><td rowspan="1">1705496026516</td><td rowspan="1">22408</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">ChromeTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">lambdatest.LambdaTestDemo</td><td><a href="#m2">loginTestDemo</a></td><td rowspan="1">1705496026516</td><td rowspan="1">55495</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">EdgeTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">lambdatest.LambdaTestDemo</td><td><a href="#m0">loginTestDemo</a></td><td rowspan="1">1705572327943</td><td rowspan="1">29404</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">ChromeTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">lambdatest.LambdaTestDemo</td><td><a href="#m1">loginTestDemo</a></td><td rowspan="1">1705572327943</td><td rowspan="1">44543</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">FirefoxTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">lambdatest.LambdaTestDemo</td><td><a href="#m2">loginTestDemo</a></td><td rowspan="1">1705572327943</td><td rowspan="1">48754</td></tr></tbody>
 </table>
 <h2>EdgeTest</h2><h3 id="m0">lambdatest.LambdaTestDemo#loginTestDemo</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>Edge</td><td>119.0</td><td>Windows 11</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>FirefoxTest</h2><h3 id="m1">lambdatest.LambdaTestDemo#loginTestDemo</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>Firefox</td><td>121.0</td><td>Windows 11</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>ChromeTest</h2><h3 id="m2">lambdatest.LambdaTestDemo#loginTestDemo</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>Chrome</td><td>121.0</td><td>Windows 11</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>ChromeTest</h2><h3 id="m1">lambdatest.LambdaTestDemo#loginTestDemo</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>Chrome</td><td>121.0</td><td>Windows 11</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>FirefoxTest</h2><h3 id="m2">lambdatest.LambdaTestDemo#loginTestDemo</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>Firefox</td><td>121.0</td><td>Windows 11</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
