--- a/UIAutomationTestingUsingSeleniumOnCloudByLambdaTest/test-output/index.html
+++ b/UIAutomationTestingUsingSeleniumOnCloudByLambdaTest/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>E:\MyEclipse\UIAutomation\UIAutomationTestingUsingSeleniumOnCloudByLambdaTest\testng.xml</span>
+                    <span>C:\Users\Ishaanjain\git\UIAutomationTestingOnCloudUsingLambdaTest\UIAutomationTestingUsingSeleniumOnCloudByLambdaTest\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -108,12 +108,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="lambdatest.LambdaTestDemo" class="method navigator-link" hash-for-method="loginTestDemo(Firefox, 121.0, Windows 11)">loginTestDemo(Firefox, 121.0, Windows 11)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="lambdatest.LambdaTestDemo" class="method navigator-link" hash-for-method="loginTestDemo(Chrome, 121.0, Windows 11)">loginTestDemo(Chrome, 121.0, Windows 11)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="lambdatest.LambdaTestDemo" class="method navigator-link" hash-for-method="loginTestDemo(Chrome, 121.0, Windows 11)">loginTestDemo(Chrome, 121.0, Windows 11)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="lambdatest.LambdaTestDemo" class="method navigator-link" hash-for-method="loginTestDemo(Firefox, 121.0, Windows 11)">loginTestDemo(Firefox, 121.0, Windows 11)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -144,18 +144,18 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="loginTestDemo(Firefox, 121.0, Windows 11)">
-                  </a> <!-- loginTestDemo(Firefox, 121.0, Windows 11) -->
-                  <span class="method-name">loginTestDemo</span>
-                  <span class="parameters">(Firefox,121.0,Windows 11)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="loginTestDemo(Chrome, 121.0, Windows 11)">
                   </a> <!-- loginTestDemo(Chrome, 121.0, Windows 11) -->
                   <span class="method-name">loginTestDemo</span>
                   <span class="parameters">(Chrome,121.0,Windows 11)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginTestDemo(Firefox, 121.0, Windows 11)">
+                  </a> <!-- loginTestDemo(Firefox, 121.0, Windows 11) -->
+                  <span class="method-name">loginTestDemo</span>
+                  <span class="parameters">(Firefox,121.0,Windows 11)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -163,7 +163,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">E:\MyEclipse\UIAutomation\UIAutomationTestingUsingSeleniumOnCloudByLambdaTest\testng.xml</span>
+            <span class="header-content">C:\Users\Ishaanjain\git\UIAutomationTestingOnCloudUsingLambdaTest\UIAutomationTestingUsingSeleniumOnCloudByLambdaTest\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -241,20 +241,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'loginTestDemo')
 data.setCell(0, 2, 'lambdatest.LambdaTestDemo')
-data.setCell(0, 3, 55495);
+data.setCell(0, 3, 48754);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'loginTestDemo')
 data.setCell(1, 2, 'lambdatest.LambdaTestDemo')
-data.setCell(1, 3, 22408);
+data.setCell(1, 3, 44543);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'loginTestDemo')
 data.setCell(2, 2, 'lambdatest.LambdaTestDemo')
-data.setCell(2, 3, 21079);
+data.setCell(2, 3, 29404);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 55 seconds</span>
+              <span class="suite-total-time">Total running time: 48 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
