--- a/UIAutomationTestingUsingSeleniumOnCloudByLambdaTest/test-output/old/Default suite/classes.html
+++ b/UIAutomationTestingUsingSeleniumOnCloudByLambdaTest/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>lambdatest.LambdaTestDemo1</td>
+<td>lambdatest.LambdaTestDemo</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginTest</td>
+<td>loginTestDemo</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
